--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "codemirror-editor-vue3": "^2.7.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.7.3",
     "nprogress": "^0.2.0",
