--- a/fe/package.json
+++ b/fe/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "codemirror-editor-vue3": "^2.7.0",
+    "codemirror-editor-vue3": "^2.1.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.7.3",
+    "json2yaml": "^1.1.0",
     "nprogress": "^0.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.3.2"
