--- a/fe/k8s/package.json
+++ b/fe/k8s/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.2",
     "codemirror-editor-vue3": "^2.1.3",
     "core-js": "^3.8.3",
